added logs, secondtask, new func

--- a/tasks/first/templates/first/base.html
+++ b/tasks/first/templates/first/base.html
@@ -28,7 +28,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page"
                        href="{% url 'first:firsttask' %}">First task</a>
-                    <a class="nav-link" href="">Second task</a>
+                    <a class="nav-link" href="{% url 'second:secondtask' %}">Second task</a>
                 </div>
             </div>
         </div>
