--- a/tasks/second/templates/second/secondtask/rate.html
+++ b/tasks/second/templates/second/secondtask/rate.html
@@ -3,9 +3,8 @@
 
 {% block content %}
     <div class="just-text">
-        <h3>Курсы на {{ date|date:"d.m.Y" }}</h3>
+        <h3>Курс на {{ date|date:"d.m.Y" }}</h3>
     </div>
-    {% for obj in data %}
         <style>
             table {
                 table-layout: fixed;
@@ -22,11 +21,14 @@
         </style>
         <table>
             <tr>
-                <td style="width: 20px">{{ obj.Cur_Scale }}</td>
-                <td style="width: 20px">{{ obj.Cur_Abbreviation }}</td>
-                <td style="width: 60px">{{ obj.Cur_Name }}</td>
-                <td style="width: 30px">{{ obj.Cur_OfficialRate }} BYN</td>
+                <td style="width: 20px">{{ data.Cur_Scale }}</td>
+                <td style="width: 20px">{{ data.Cur_Abbreviation }}</td>
+                <td style="width: 60px">{{ data.Cur_Name }}</td>
+                <td style="width: 30px">{{ data.Cur_OfficialRate }} BYN</td>
             </tr>
         </table>
-    {% endfor %}
+    <p></p>
+    <div class="just-text">
+        <h4>{{ different_rate }}</h4>
+    </div>
 {% endblock %}
