--- a/tasks/second/templates/second/secondtask/rate.html
+++ b/tasks/second/templates/second/secondtask/rate.html
@@ -17,6 +17,7 @@
                 border: 1px solid black;
                 padding: 2px;
                 background-color: #c1d6cc;
+                text-align: center;
             }
         </style>
         <table>
