--- a/tasks/first/templates/first/base.html
+++ b/tasks/first/templates/first/base.html
@@ -27,8 +27,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page"
-                       href="{% url 'first:firsttask' %}">First task</a>
-                    <a class="nav-link" href="{% url 'second:secondtask' %}">Second task</a>
+                       href="{% url 'first:firsttaskdoc' %}">First task</a>
+                    <a class="nav-link" href="{% url 'second:secondtaskdoc' %}">Second task</a>
                 </div>
             </div>
         </div>
